syntax = "proto3";
package poktroll.session;

option go_package = "github.com/pokt-network/poktroll/x/session/types";

import "cosmos_proto/cosmos.proto";

import "poktroll/shared/service.proto";
import "poktroll/application/application.proto";
import "poktroll/shared/supplier.proto";

// NOTE: Using signed integers for consistency with the cosmos SDK

// SessionHeader is a lightweight header for a session that can be passed around.
// It is the minimal amount of data required to hydrate & retrieve all data relevant to the session.
message SessionHeader {
  string application_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"]; // The Bech32 address of the application using cosmos' ScalarDescriptor to ensure deterministic encoding
  poktroll.shared.Service service = 2; // The service this session is for
  // NOTE: session_id can be derived from the above values using on-chain but is included in the header for convenience
  string session_id = 3; // A unique pseudoranom ID for this session
  int64 session_start_block_height = 4; // The height at which this session started
  // Note that`session_end_block_height` is a derivative of (`start` + `num_blocks_per_session`)
  // as goverened by on-chain params at the time of the session start.
  // It is stored as an additional field to simplofy business logic in case
  // the number of blocks_per_session changes during the session.
  int64 session_end_block_height = 5; // The height at which this session ended, this is the last block of the session
}

// Session is a fully hydrated session object that contains all the information for the Session
// and its parcipants.
message Session {
  SessionHeader header = 1; // The header of the session containing lightweight data
  string session_id = 2; // A unique pseudoranom ID for this session
  int64 session_number = 3; // The session number since genesis
  int64 num_blocks_per_session = 4;  // The number of blocks per session when this session started
  poktroll.application.Application application = 5; // A fully hydrated application object this session is for
  repeated poktroll.shared.Supplier suppliers = 6; // A fully hydrated set of servicers that are serving the application
}